# example-fastapi

./: pyproject.toml
.github/workflows/: guarddog.yaml
