[tool.poetry]
name = "example-fastapi"
version = "0.1.0"
description = ""
authors = ["jiyeonseo <seojeee@gmail.com>"]
readme = "README.md"
packages = [{include = "example_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
